--- a/gb/20/9/28/n12435346.md
+++ b/gb/20/9/28/n12435346.md
@@ -1,65 +1,83 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eqlzxz356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/eqlzxz356/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/eqlzxz356/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eqlzxz356/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eqlzxz356/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eqlzxz356/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eqlzxz356/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eqlzxz356/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加拿大华人向李洪志大师恭贺中秋</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/Capture-11.jpg" />
-<h6>时值中秋佳节来临之际，加拿大社区侨领、知名人士及了解法轮功真相的华人纷纷通过《大纪元》媒体，向法轮功创始人李洪志先生表达中秋祝福。（大纪元合成图）
+<h6>时值中秋佳节来临之际，加拿大社区侨领、知名人士及了解法轮功真相的华人纷纷通过大纪元媒体，向法轮功创始人李洪志先生表达中秋祝福。（大纪元合成图）
 </h6>
 <hr>
-<p>【大纪元2020年09月28日讯】（大纪元记者伊铃多伦多报导）时值中秋佳节来临之际，加拿大社区侨领、知名人士及了解法轮功真相的华人纷纷通过《大纪元》媒体，向<ahref="https://github.com/eqlzxz356/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F%E5%88%9B%E5%A7%8B%E4%BA%BA%E6%9D%8E%E6%B4%AA%E5%BF%97%E5%85%88%E7%94%9F.md#1">法轮功创始人李洪志先生</a>表达中秋祝福，感谢他把真善忍洪传世界，让亿万人身体健康，道德回升，为人类作出巨大贡献。</p>
-<figure id="attachment_12435381" style="width: 448px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0034-1.jpg"><img class=" wp-image-12435381" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0034-1-600x402.jpg" alt="" width="448" b="300" /></a><figcaption class="wp-caption-text">2020年中秋节前夕，民阵全球副主席、著名作家盛雪恭贺李洪志先生中秋快乐！（伊铃/大纪元）</figcaption></figure>
-<p>民阵全球副主席、著名作家盛雪说：“李洪志先生以其大智、大仁、大德、大能，感召启迪上亿信众遵循真、善、忍的大法法则，修身养性、推己及人、惠及人间，并在全球抗击人类历史上最邪恶暴政的最前线。辛苦了。 祝福中秋吉祥。”</p>
-<h2>社区侨领赞扬法轮功造福人类</h2>
-<figure id="attachment_12435375" style="width: 460px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0072.jpg"><img class=" wp-image-12435375" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0072-600x402.jpg" alt="" width="460" b="308" /></a><figcaption class="wp-caption-text">2020年中秋节前夕，多伦多台湾同乡会会长陈慧珍和她的先生谢树荣（Ron Shieh）共同向李洪志大师<ahref="https://github.com/eqlzxz356/djy/blob/master/gb/tag/%E6%81%AD%E8%B4%BA%E4%B8%AD%E7%A7%8B.md#1">恭贺中秋</a>：“今天特别在此向李大师祝福中秋佳节，祝法轮功精神继续造福人群！” （伊铃/大纪元）</figcaption></figure>
-<p>多伦多台湾同乡会会长陈慧珍和她的先生谢树荣（Ron Shieh）共同向李洪志大师<ahref="https://github.com/eqlzxz356/djy/blob/master/gb/tag/%E6%81%AD%E8%B4%BA%E4%B8%AD%E7%A7%8B.md#1">恭贺中秋</a>：“今天特别在此向李大师祝福中秋佳节，祝法轮功精神继续造福人群！”</p>
-<p>陈慧珍说：“多年前经朋友热心介绍法轮功，知道这功法能帮助人们在繁忙的生活</p>
+<p>【大纪元2020年09月28日讯】（大纪元记者伊铃多伦多报导）时值中秋佳节来临之际，加拿大社区侨领、知名人士及了解<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>真相的华人纷纷通过大纪元媒体，向法轮功创始人李洪志先生表达中秋祝福，感谢他把“真、善、忍”理念洪传世界，让亿万人身体健康，道德回升，为人类做出巨大贡献。</p>
+<figure id="attachment_12435381" style="width: 448px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0034-1.jpg"><img class=" wp-image-12435381" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0034-1-600x402.jpg" alt="" width="448" b="300" /></a><figcaption class="wp-caption-text">2020年<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>前夕，民阵全球副主席、著名作家盛雪恭贺李洪志先生中秋快乐！（伊铃／大纪元）</figcaption></figure>
+<p>民阵全球副主席、著名作家盛雪说：“李洪志先生以其大智、大仁、大德、大能，感召启迪上亿信众遵循‘真、善、忍’的大法法则，修身养性、推己及人、惠及人间，并在全球抗击人类历史上最邪恶暴政的最前线。辛苦了。祝福中秋吉祥。”</p>
+<h2>社区侨领赞扬<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>造福人类</h2>
+<p>多伦多台湾同乡会会长陈慧珍和她的先生谢树荣（Ron Shieh）共同向李洪志大师恭贺中秋：“今天特别在此向李大师祝福中秋佳节，祝法轮功精神继续造福人类！”</p>
+<figure id="attachment_12435375" style="width: 460px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0072.jpg"><img class=" wp-image-12435375" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0072-600x402.jpg" alt="" width="460" b="308" /></a><figcaption class="wp-caption-text">2020年<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E7%A7%8B%E8%8A%82.md#1">中秋节</a>前夕，多伦多台湾同乡会会长陈慧珍和她的先生谢树荣（Ron Shieh）共同向李洪志大师恭贺中秋：“今天特别在此向李大师祝福中秋佳节，祝法轮功精神继续造福人类！”（伊铃／大纪元）</figcaption></figure>
+<p>陈慧珍说：“多年前经朋友热心介绍法轮功，知道这功法能帮助人们在繁忙的生活里，经由短暂的修炼很快可以使能量提升，精神很快恢复过来，是平衡身心健康的方法；对增进社会安定有很大的作用及影响。”</p>
+<p>加拿大建筑师谢树荣说：“我一直是大纪元的忠实读者；同时也幸运地观赏神韵艺术团的公演。对法轮功组织在北美洲及世界各国，坚持民主自由的信念，并以现代专业精神，弘扬在共产中国下已荡然无存的传统中华文化，令人钦佩！希望你们的努力会得到世界爱好民主的国家及人们的认同及鼓励！”</p>
+<figure id="attachment_12435380" style="width: 464px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0026-1.jpg"><img class=" wp-image-12435380" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0026-1-600x402.jpg" alt="" width="464" b="311" /></a><figcaption class="wp-caption-text">多伦多台湾商会会长郑思恩向李大师致以中秋祝福：“祝福李大师，平安健康，福康安泰！”（伊铃／大纪元）</figcaption></figure>
+<p>多伦多台湾商会会长郑思恩表示，很荣幸能有机会向法轮功创始人李大师表达祝福。她说：“李大师带领着许多践行‘真、善、忍’的修炼者，修养心性，归正品行，并且实践出来，其中‘忍’是最先要做的第一课。愿李大师继续领着愿意修炼的人们，恢复内心的单纯。”</p>
+<p>郑思恩并赞扬法轮功学员创办的媒体，“大纪元秉持正义，不畏惧强权，实为不易！祈愿你们继续为亚洲人放出光芒。”“感谢大纪元的记者、工作人员与读者们，有你们，我们才有能信任的媒体！”</p>
+<p>郑思恩向李大师致以中秋祝福：“祝福李大师，平安健康，福康安泰！”</p>
+<h2>名中医师赞扬法轮功</h2>
+<p>从中国逃亡加拿大的北京著名中医师赵中元，向法轮功创始人李洪志先生表达中秋祝福：“值此中秋佳节，向法轮功创始人李大师致敬！向法轮功致敬！向法轮功学员致敬！”</p>
+<figure id="attachment_12435376" style="width: 456px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/0001-1.jpg"><img class=" wp-image-12435376" src="https://i.epochtimes.com/assets/uploads/2020/09/0001-1-600x450.jpg" alt="" width="456" b="342" /></a><figcaption class="wp-caption-text">2020年中秋节前夕，从中国逃亡加拿大的北京著名中医师赵中元，向法轮功创始人李洪志先生表达中秋祝福：“值此中秋佳节，向法轮功创始人李大师致敬！向法轮功致敬！向法轮功学员致敬！”（伊铃／大纪元）</figcaption></figure>
+<p>赵中元因为709律师治病而遭受中共打压；而709律师是因为法轮功学员辩护而遭中共迫害和打压。赵中元于2019年底逃来加拿大，他表示自己对法轮功群体有深刻的了解。</p>
+<p>“法轮功非常好，法轮功学员是一群非常善良的人。他们是受中共压迫和承受中共苦难最深重的群体，也是反共最坚决、人数最多、最大的群体。面对中共长达21年的严酷打压，他们从未退缩。”他说。</p>
+<p>赵中元赞扬法轮功学员发起的讲真相、劝?“三退”（退出中共党、团、队）运动：“法轮功学员付出很多，在中国大陆，哪怕最偏僻角落，都可以看到法轮功的标语，在钱币上也有劝‘三退’的标语，在北京的各大公园都有法轮功的劝‘三退’标语。”</p>
+<p>赵中元认为：“其实他们做这些，是冒着极大风险的。他们做这些并不是为了自己，他们讲‘真、善、忍’。他们是真善，不是伪善。而共产党讲的那些都是伪善，根本心里都没有怀着人民，他们怀着的是人民币。”</p>
+<p>“我很支持法轮功发起的退党运动，让中国人民认清中共的邪恶，从而脱离这个邪恶组织，变成一个正常人。”赵中元说。</p>
+<p>“祝愿法轮功在未来更加发展壮大！”</p>
+<p>“祝福法轮功创始人李大师中秋快乐！”</p>
+<p>“祝福法轮功学员中秋快乐！”赵中元说。</p>
+<h2>前大陆媒体人赞法轮功为华人增光</h2>
+<p>前凤凰网记者张真瑜向李大师表达中秋祝福。他表示，1999年7月20日，中共开始了对法轮功学员长达21年的迫害。在这21年中，中共对法轮功的迫害是从思想上铲除，肉体上消灭，宣传上抹黑，不断污名化法轮功。在国内，中共的人权迫害案中，经常看到法轮功学员的案子；劳教所关押的人、法轮功学员占的比例很大；他们遭到酷刑迫害，甚至活摘器官。</p>
+<figure id="attachment_12435378" style="width: 462px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0055.jpg"><img class=" wp-image-12435378" src="https://i.epochtimes.com/assets/uploads/2020/09/DSC_0055-600x402.jpg" alt="" width="462" b="310" /></a><figcaption class="wp-caption-text">2020年中秋节前夕，中国大陆前媒体人张真瑜恭贺李洪志先生中秋快乐！（伊铃／大纪元）</figcaption></figure>
+<p>“在国际上，中共举国家之力，企图让法轮功成为历史。但是人们看到的是法轮功并没有被中共所消灭，反倒是被逼到悬崖后绝处逢生，21年的辛酸也只有法轮功的学员们体会最深，一路走下来实属不易。”他说。</p>
+<p>张真瑜说，作为一位前媒体人，对法轮功学员办的媒体既羡慕又崇拜：“羡慕你们能自由地报导，真实地说话；崇拜你们在无任何资金支持的情况下，学员们能够长期义务为媒体服务，20多年如一日，把法轮功的媒体办成海外华文媒体的中坚力量。”</p>
+<p>张真瑜是一名基督徒，去过世界很多地方。他说：“你们的身影遍布全球，到哪里我都愿意与法轮功学员交流，并倾听他们的故事。同时你们也是我见过最平和、最友善的华人群体。”</p>
+<p>“我非常感谢李洪志先生，在您的带领下，法轮功为整个华人群体增色不少，让全世界了解到中国人不是懦弱畏惧强权的；另外也佩服您的胸襟，没有因为法轮功受到迫害而以暴制暴，而是不断释出真诚和忍耐，来化解暴戾。”</p>
+<p>“在此中秋佳节，我祝福法轮功和李洪志先生！正义必将到来，让我们笑着迎接胜利。”张真瑜说。</p>
+<p>责任编辑：文风 ＃</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/9/25/n10740910.md#1">俄罗斯、乌克兰、克里米亚法轮功学员恭祝李洪志大师中秋节好</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/9/25/n10740915.md#1">西欧五国法轮功学员恭祝李洪志大师中秋节快乐</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/9/25/n10740921.md#1">加拿大各地法轮功学员恭祝李洪志大师中秋节好</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/19/9/14/n11520936.md#1">中国各省法轮功学员恭祝李洪志大师中秋节快乐</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/18/n12414720.md#1">加拿大各省最新疫情数据 （9月27日）</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/28/n12435084.md#1">安省数百人在世界最长淡水沙滩集会</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/28/n12434833.md#1">应对第二波疫情 多伦多医院准备好了吗？</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12434599.md#1">多伦多市中心多家餐馆有人染疫 危及超2千人</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/28/n12434524.md#1">上周六起 安省酒吧餐馆限时卖酒</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12434439.md#1">9月27日 安省新增染疫491例 自5月初以来最高</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/25/n10740910.md#1">俄罗斯、乌克兰、克里米亚法轮功学员恭祝李洪志大师中秋节好</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/25/n10740915.md#1">西欧五国法轮功学员恭祝李洪志大师中秋节快乐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/25/n10740921.md#1">加拿大各地法轮功学员恭祝李洪志大师中秋节好</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/9/14/n11520936.md#1">中国各省法轮功学员恭祝李洪志大师中秋节快乐</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/18/n12414720.md#1">加拿大各省最新疫情数据 （9月29日）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/30/n12440400.md#1">48小时才出结果 多伦多病毒测试亮红灯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/30/n12440397.md#1">提醒！凌晨乘TTC最好结伴而行 以免被抢</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/29/n12440254.md#1">安省限制护理院访客人数 下周一生效</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/30/n12440134.md#1">卖项链电子转账收款 银行账户竟被冻结</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/9/29/n12440101.md#1">安省周二报增554人染疫 卫生官：社交圈限家人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/26/n4648466.md#1" target="_blank">在法轮大法中修炼重生的宁德人（二）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/26/n12433032.md#1">【重播】川普宾州“让美国再次伟大”集会演讲</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/22/n12422738.md#1">【思想领袖】参议员克鲁兹：推翻中共的战略</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12434192.md#1">【新闻第一现场】拜登儿子通中俄 疑涉卖淫人口贩卖圈</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12430820.md#1">【新闻看点】中共外交官发飙 联大决议删习语录</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/26/n12431766.md#1">梦想成真 摄影师捕捉银河下狮子饮水的惊人照</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/26/n12431760.md#1">【拍案惊奇】许家印逼宫中共 华为免死了？</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12429560.md#1">黄鸿升今火化 峮峮痛哭 杨丞琳送最后一程</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12430391.md#1">黄鸿升花葬阳明山 宪哥曝遗容“很帅像睡觉”</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12430801.md#1">黄鸿升长眠阳明山 生前IG转为纪念账号</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12433372.md#1">竹内结子被丈夫发现于家中身亡 享年40岁</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12433724.md#1">竹内结子死讯公司也震惊 网友忧井本绚子难过</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/26/n12431601.md#1">车评：完美的油电混合 2020 Lexus RX450h F Sport</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/27/n12433788.md#1">陆媒称共军24小时内可登陆台湾 遭美媒打脸</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/23/n12425078.md#1">6类人易得退化性关节炎 医师：做对运动护膝盖</a></li>
-<li><a href="https://github.com/eqlzxz356/djy/blob/master/gb/20/9/25/n12430512.md#1">日本前首相医师：这样站立2分钟 等于走路1小时</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eqlzxz356/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eqlzxz356/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/28/n12435346.htm">加拿大华人向李洪志大师恭贺中秋</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/28/n12435346.htm">加拿大华人向李洪志大师恭贺中秋</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eqlzxz356/djy/blob/master/gb/20/9/28/n12435346.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eqlzxz356/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eqlzxz356/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eqlzxz356/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eqlzxz356/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eqlzxz356/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/28/n12435346.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
